nav links changed

--- a/New folder/index.html
+++ b/New folder/index.html
@@ -22,16 +22,16 @@
 
         <div class="row">
           <div class="col-3">
-            <a href="#onepiece" style="color: black;"> <div class="h1 ps-5 ">One Piece</div></a>
+            <a style="text-decoration: none; color: black;" href="#onepiece" > <div class="h1 ps-5 ">One Piece</div></a>
           </div>
           <div class="col-3">
-            <a href="#naruto" style="color: black;"> <div class="h1 ps-5 " >Naruto</div></a>
+            <a style="text-decoration: none; color: black;" href="#naruto" > <div class="h1 ps-5 " >Naruto</div></a>
           </div>
           <div class="col-3">
-            <a href="#aot" style="color: black;"> <div class="h1 ps-5 ">AOT</div></a>
+            <a style="text-decoration: none; color: black;" href="#aot" > <div class="h1 ps-5 ">AOT</div></a>
           </div>
           <div class="col-3">
-            <a href="#jjk" style="color: black;"> <div class="h1 ps-5 ">JJK</div></a>
+            <a style="text-decoration: none; color: black;" href="#jjk" > <div class="h1 ps-5 ">JJK</div></a>
           </div>
         </div>
       
